--- a/README.textile
+++ b/README.textile
@@ -1,12 +1,11 @@
 
 h1. stackmagic's maven repo
 
-not much to see here, check out the "actual repo":http://stackmagic.github.com/maven-repo/
-
-or add the repository to your pom:
+p. not much to see here on the master branch, check out the gh-pages branch or the "actual publish maven repo":http://stackmagic.github.com/maven-repo/ or add the repository to your pom
 
 bc..  <repository>
     <id>stackmagic.github.maven-repo</id>
     <url>http://stackmagic.github.com/maven-repo/</url>
 </repository> 
 
+p. cheers!
